--- a/index.html
+++ b/index.html
@@ -4,7 +4,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Single Price</title>
+  <meta name="title" content="Single Price">
+  <meta name="author" content="VIMP">
+  <meta name="description"
+    content="In this challenge, you will build out the pricing component to the designs provided. This is perfect for beginners and people who want to complete a smaller challenge.">
+  <meta name="keywords" content="Frontend Mentor Challenges,Single price grid,newbiew challenge">
+  <meta name="robots" content="index, follow">
+
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Single Price">
+  <meta property="og:site_name" content="Single Price">
+  <meta property="og:description"
+    content="In this challenge, you will build out the pricing component to the designs provided. This is perfect for beginners and people who want to complete a smaller challenge.">
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/mendezpvi/fm-single-price-grid/main/assets/screenshot/thumbnail.png">
+  <meta property="og:url" content="https://mendezpvi.github.io/fm-single-price-grid/">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Single Price">
+  <meta name="twitter:description"
+    content="In this challenge, you will build out the pricing component to the designs provided. This is perfect for beginners and people who want to complete a smaller challenge.">
+  <meta name="twitter:image"
+    content="https://raw.githubusercontent.com/mendezpvi/fm-single-price-grid/main/assets/screenshot/thumbnail.png">
+  <meta name="twitter:domain" content="mendezpvi.github.io">
+  <meta name="twitter:url" content="https://mendezpvi.github.io/fm-single-price-grid/">
 
   <link rel="icon" href="./assets/icon/favicon-32x32.png">
   <link rel="apple-touch-icon" href="./assets/icon/favicon-32x32.png">
@@ -20,7 +45,8 @@
       <section class="main">
         <h1 class="main__title">Join our community</h1>
         <h2 class="main__subtitle">30-day, hassle-free money back guarantee</h2>
-        <p class="main__description">Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+        <p class="main__description">Gain access to our full library of tutorials along with expert code reviews.
+          Perfect for any developers who are serious about honing their skills.</p>
       </section>
 
       <section class="section">
@@ -48,7 +74,9 @@
     </div>
   </main>
   <footer class="attribution">
-    <small>Challenge by <a href="https://www.frontendmentor.io/challenges" class="attribution__cta" target="_blank" rel="noreferrer">Frontend Mentor</a> - Coded by <a href="https://github.com/mendezpvi/fm-single-price-grid" class="attribution__cta" target="_blank" rel="noreferrer">VIMP</a></small>
+    <small>Challenge by <a href="https://www.frontendmentor.io/challenges" class="attribution__cta" target="_blank"
+        rel="noreferrer">Frontend Mentor</a> - Coded by <a href="https://github.com/mendezpvi/fm-single-price-grid"
+        class="attribution__cta" target="_blank" rel="noreferrer">VIMP</a></small>
   </footer>
 </body>
 
